<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.happycarl.geotown.app.gui.OverviewActivity" >

    <!--<item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="50"
        android:showAsAction="always"/>

    There are no settings yet
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
        -->
    <item android:id="@+id/action_scan_qr_route"
        android:title="@string/action_scan_qr_code"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_qr_code"
    />

    <item android:id="@+id/action_achievements"
        android:title="@string/action_overview_achievements"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_leaderboard"
        android:title="@string/action_overview_leaderboard"
        android:orderInCategory="150"
        app:showAsAction="never"/>

    <item android:id="@+id/action_upload_track_data"
        android:title="@string/action_overview_upload_track_data"
        android:orderInCategory="60"
        app:showAsAction="never"
        android:checkable="true"
        />

    <item android:id="@+id/action_glpus_sign_out"
        android:title="@string/action_overview_gplus_sign_out"
        android:orderInCategory="190"
        app:showAsAction="never"/>

    <item android:id="@+id/action_credits"
        android:title="@string/action_credits"
        android:orderInCategory="190"
        app:showAsAction="never"/>

    <item android:id="@+id/action_close"
        android:title="@string/action_overview_close"
        android:orderInCategory="200"
        app:showAsAction="never"/>
</menu>
