<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="de.happycarl.geotown.app.gui.RouteFinishedActivity">

    <TextView
        android:id="@+id/route_finished_title"
        android:text="@string/text_route_finished_header"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/route_finished_detail"
        android:text="@string/text_route_finished_text"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.Medium" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/route_finished_map"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.google.android.gms.maps.MapFragment"
        android:clickable="false" />

    <Button
        android:id="@+id/route_finished_button_okay"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/button_route_finished_okay"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

</LinearLayout>
